--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,7 @@ body {
 
 #buttons {
   display: inline-block;
-  position: fixed;
-  bottom: 150px;
+  bottom: 5%;
   width: 100%;
   position: fixed;
   text-align: center;
